feat: user-isolated scan paths, .gitignore filtering, BizAssert, unified exception handling, add gitlab_username,update backend/readme